# hexgame

./: draw_hex.py  instructions.txt  main_hex.py  main_hex_IA.py  main_hex_IA_no_graphics.py  minimax.py  module.py  popup.py  pyproject.toml
hex_game_env/: pyvenv.cfg
hex_game_env/Scripts/: activate  activate.bat
other/: main_no_graphics.py  main_rect.py
