[tool.poetry]
name = "hex_game_2"
version = "0.1.0"
description = ""
authors = ["IreneMars <irenecharm97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
pygame = "^2.0.1"
Shapely = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
